menu styling change, animated cursor added

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Portfolio Website of Kane Jansen"
-    />
+    <meta name="description" content="Portfolio Website of Kane Jansen" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,7 +23,6 @@
     -->
     <title>Portfolio Kane Jansen</title>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -42,7 +38,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script>
-      
       if (window.netlifyIdentity) {
         window.netlifyIdentity.on("init", (user) => {
           if (!user) {
